--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,12 @@
-{ 
-    "compilerOptions": {
-        "baseUrl": "."
-      }    
+{
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/components": ["./src/components/*"],
+      "@/pages": ["./src/pages/*"],
+      "@/data": ["./src/data/*"],
+      "@/lib": ["./src/lib/*"],
+      "@/": ["./src/*"]
+    }
+  }
 }
