--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-    "name": "next-netlify-platform-starter",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@netlify/blobs": "^8.1.0",
-        "blobshape": "^1.0.0",
-        "bright": "^0.8.5",
-        "markdown-to-jsx": "^7.4.5",
-        "next": "15.1.0",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "unique-names-generator": "^4.7.1"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.18",
-        "daisyui": "^4.12.8",
-        "eslint": "8.57.1",
-        "eslint-config-next": "15.1.0",
-        "postcss": "^8.4.36",
-        "tailwindcss": "^3.4.1"
-    }
+  "name": "portfolio-website",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "10.4.15",
+    "clsx": "^2.1.1",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.15",
+    "framer-motion": "^10.18.0",
+    "gray-matter": "^4.0.3",
+    "next": "^15.1.0",
+    "postcss": "^8.4.49",
+    "react": "^19.0.0",
+    "react-animated-numbers": "^0.16.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "react-type-animation": "^3.1.0",
+    "resend": "^1.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "3.3.3"
+  }
 }
